@@ -1,14 +1,18 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 33
+    namespace = "com.realappraiser.gharvalue"
+    compileSdk = 34
+
     defaultConfig {
         applicationId "com.realappraiser.gharvalue"
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 28
-        versionName "3.0.1"
-        resConfigs "en"
+        minSdk 21
+        targetSdk 34
+        versionCode 29
+        versionName "3.1.0"
+        resourceConfigurations += ['en']
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         //signingConfig signingConfigs.release
@@ -16,10 +20,16 @@ android {
         // Enabling multidex support.
         multiDexEnabled true
     }
-
-    dexOptions {
-        javaMaxHeapSize "Xg"
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
+
+
+
 
     signingConfigs {
 
@@ -34,6 +44,8 @@ android {
             v2SigningEnabled true
         }
     }
+
+
     buildTypes {
         release {
             minifyEnabled true
@@ -41,7 +53,7 @@ android {
             debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', 'DATE', '"21-Jul-2024"'
+            buildConfigField 'String', 'DATE', '"16-Aug-2024"'
             signingConfig signingConfigs.release
 
         }
@@ -51,59 +63,22 @@ android {
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', 'DATE', '"21-Jul-2024"'
+            buildConfigField 'String', 'DATE', '"16-Aug-2024"'
         }
     }
-    packagingOptions {
-
-        exclude "lib/mips/libmodpdfium.so"
-        exclude "lib/mips/libmodft2.so"
-        exclude "lib/mips/libmodpng.so"
-        exclude "lib/mips/libjniPdfium.so"
-
-        exclude "lib/armeabi/libmodpdfium.so"
-        exclude "lib/armeabi/libmodft2.so"
-        exclude "lib/armeabi/libmodpng.so"
-        exclude "lib/armeabi/libjniPdfium.so"
-
-        exclude "lib/x86_64/libmodpdfium.so"
-        exclude "lib/x86_64/libmodft2.so"
-        exclude "lib/x86_64/libmodpng.so"
-        exclude "lib/x86_64/libjniPdfium.so"
-
-        exclude "lib/x86/libmodpdfium.so"
-        exclude "lib/x86/libmodft2.so"
-        exclude "lib/x86/libmodpng.so"
-        exclude "lib/x86/libjniPdfium.so"
-
-        exclude "lib/arm64-v8a/libmodpdfium.so"
-
-        //below lines Added by tharani
-        exclude 'LICENSE'
-        exclude 'LICENSE.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/DEPENDENCIES.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/dependencies.txt'
-        exclude 'lib/x86/libsqlcipher.so'
-        exclude 'META-INF/LGPL2.1'
-        exclude 'META-INF/ASL2.0'
-
-        exclude 'META-INF/io.netty.versions.properties'
-        exclude 'META-INF/INDEX.LIST'
-
-        exclude 'main/AndroidManifest.xml'
-        exclude 'main/res/values/strings.xml'
-        //below lines Added by tharani ended
+    buildFeatures {
+        buildConfig true
+        viewBinding true
     }
-   /* splits {
+    packagingOptions {
+        jniLibs {
+            excludes += ['lib/mips/libmodpdfium.so', 'lib/mips/libmodft2.so', 'lib/mips/libmodpng.so', 'lib/mips/libjniPdfium.so', 'lib/armeabi/libmodpdfium.so', 'lib/armeabi/libmodft2.so', 'lib/armeabi/libmodpng.so', 'lib/armeabi/libjniPdfium.so', 'lib/x86_64/libmodpdfium.so', 'lib/x86_64/libmodft2.so', 'lib/x86_64/libmodpng.so', 'lib/x86_64/libjniPdfium.so', 'lib/x86/libmodpdfium.so', 'lib/x86/libmodft2.so', 'lib/x86/libmodpng.so', 'lib/x86/libjniPdfium.so', 'lib/arm64-v8a/libmodpdfium.so', 'lib/x86/libsqlcipher.so']
+        }
+        resources {
+            excludes += ['LICENSE', 'LICENSE.txt', 'META-INF/ASL2.0', 'META-INF/DEPENDENCIES', 'META-INF/DEPENDENCIES.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/dependencies.txt', 'META-INF/LGPL2.1', 'META-INF/ASL2.0', 'META-INF/io.netty.versions.properties', 'META-INF/INDEX.LIST', 'main/AndroidManifest.xml', 'main/res/values/strings.xml']
+        }
+    }
+    /* splits {
         abi {
             enable true
             reset()
@@ -111,34 +86,23 @@ android {
             universalApk true
         }
     }*/
-    lintOptions {
-        // set to true to turn off analysis progress reporting by lint
-        quiet true
-        // if true, stop the gradle build if errors are found
-        abortOnError false
-        // if true, only report errors
-        ignoreWarnings true
-        // if true, check all issues, including those that are off by default
-        checkAllWarnings true
-        // if true, show all locations for an error, do not truncate lists, etc.
-        showAll true
-
-        // if true, generate an XML report for use by for example Jenkins
-        xmlReport true
-        // file to write report to (if not specified, defaults to lint-results.xml)
-        xmlOutput file("lint-report.xml")
-
-        // if true, generate an HTML report (with issue explanations, sourcecode, etc)
-        htmlReport true
-        // optional path to report (default will be lint-results.html in the builddir)
-        htmlOutput file("lint-report.html")
-    }
     productFlavors {
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    lint {
+        abortOnError false
+        checkAllWarnings true
+        htmlOutput file('lint-report.html')
+        htmlReport true
+        ignoreWarnings true
+        quiet true
+        showAll true
+        xmlOutput file('lint-report.xml')
+        xmlReport true
     }
 }
 
@@ -149,19 +113,20 @@ dependencies {
     /*implementation 'com.android.support.constraint:constraint-layout:1.0.2'*/
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test:core:1.4.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation files('libs/jsr223.jar')
 
 
-    implementation 'com.loopeer.lib:shadow:0.0.3'
+    implementation 'com.github.itning:shadow:0.0.3'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.okhttp3:okhttp:4.4.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
     implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-    implementation 'com.commit451:PhotoView:1.2.4'
+    annotationProcessor'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.github.barteksc:android-pdf-viewer:3.0.0-beta.4'
     /****form design compile****/
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -181,49 +146,53 @@ dependencies {
     /*implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true
     }*/
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
+  //  implementation 'com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:v1.0.6'
     // loading
-    implementation 'com.wang.avi:library:2.1.3'
+   implementation 'com.wang.avi:library:2.1.3'
 
     //Room persistance library added @feb20 for Allproperty ntw listener offline datastore in other detail screen
-    implementation 'androidx.room:room-runtime:2.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
+    implementation 'androidx.room:room-runtime:2.6.1'
+    annotationProcessor 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.8.3'
     // not necessary if you are using Support Library 26.1+ or lifecycle:extensions
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     // Progress bar
     implementation 'me.itangqi.waveloadingview:library:0.3.5'
     implementation 'com.faendir.rhino:rhino-android:1.4'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
     //firebase Analytics
-    implementation 'com.google.firebase:firebase-core:18.0.0'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
     //firebase crashlytics
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.0.3'
     //firebase remote config
-    implementation 'com.google.firebase:firebase-config:20.0.1'
+    implementation 'com.google.firebase:firebase-config:22.0.0'
 
 
     //work manager
-    implementation "androidx.work:work-runtime:2.7.1"
+    implementation "androidx.work:work-runtime:2.9.0"
 
     //zetbaitsu Compressor
-    implementation 'id.zelory:compressor:2.1.0'
+    implementation 'id.zelory:compressor:3.0.1'
+
+    //newly added
+//    implementation 'com.github.bumptech.glide:glide:4.14.2'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     //sdp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
     //google places
-    implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation 'com.google.android.libraries.places:places:3.5.0'
 
 
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
-    implementation 'com.google.android.gms:play-services-safetynet:17.0.1'
+    implementation 'com.google.android.gms:play-services-safetynet:18.1.0'
 
 
     //Gson
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     //Shimmer effect
@@ -235,6 +204,5 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
 // ADD THIS AT THE BOTTOM
-apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.google.gms.google-services'
+
 
